Prototype/WhiteBoxCapsule/src/assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

:root {
  --background-color: #fff !important;
  --text-color: #333 !important;
  --border-color: #cdcdcd !important;
  --button-color: #333 !important;
  --box-border: 1px solid #cdcdcd !important;
}

body {
  background-color: var(--background-color);
  color: var(--text-color);
}

.dark-theme {
  --background-color: #333 !important;
  --text-color: #fff !important;
  --border-color: #b8b8b8 !important;
  --button-color: #fff !important
;
}

.play-mode {
  --box-border: 1px solid #cdcdcd;
}

.add-mode {
  --box-border: 1px solid rgb(169, 89, 255);
}

body {
  font-family: 'Inter', sans-serif;
  max-width: 100%;
  padding: 20px;
}

#challenge-header {
  align-items: stretch;
  padding: 10px;
}

#challenge-timer {
  text-align: right !important;
}

#challenge-timer-hurry {
  text-align: right !important;
  font-weight: bold;
  color: red;
}

#challenge-code {
  height: 625px;
  width: 45%;
  border-radius: 5px;
  border: var(--box-border);
  overflow-y: scroll;
}

pre {
  white-space: pre-wrap;
  background: hsl(30, 80%, 90%);
}

.game-board {
  display: grid;
  grid-template-columns: 65px 65px 65px 65px 65px 65px 65px 65px;
  grid-template-rows: 65px 65px 65px 65px 65px 65px 65px 65px;
  justify-content: center;
}

.game-board-out {
  display: grid;
  grid-template-columns: 65px;
  grid-template-rows: 65px;
  justify-content: center;
}

.box {
  background-color: var(--background-color);
  border: var(--box-border);
  margin: 3px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.button {
  background-color: var(--background-color);
  border: 1px solid var(--border-color);
  margin: 3px;
  padding: 5px 10px;
  color: var(--text-color);
}

.board-progress-bar {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background: transparent;
  padding: 0px 10px;
}

.progress-circle {
  margin: 3px;
  vertical-align: middle;
  border-radius: 100px;
  width: 17.5px;
  height: 17.5px;
}

.green {
  background-color: greenyellow;
}

.gray {
  background-color: gray;
}

.piece-overlap {
  display: grid;
  grid-template-columns: 25px 25px;
  grid-template-rows: 25px 25px;
  justify-content: center;
}

.overlap-box {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 14px;
}

.piece {
  border-radius: 100px;
  height: 55px;
  width: 55px;
  border: 1px solid var(--border-color);
}

.small {
  height: 20px;
  width: 20px;
}

.red {
  background-color: red;
}

.blue {
  background-color: blue;
}

.selected {
  background-color: rgb(169, 89, 255);
}

.empty {
  background-color: transparent;
  border-color: transparent;
}

#header-row {
  margin-bottom: 10px;
}

.game-board-label .row {
  padding-left: calc(var(--bs-gutter-x) * 0.5);
  padding-right: calc(var(--bs-gutter-x) * 0.5);
}

.game-board-label .col {
  display: flex;
  justify-content: center;
}

.game-board-col-labels {
  display: grid;
  grid-template-columns: 65px 65px 65px 65px 65px 65px 65px 65px;
  grid-template-rows: 25px;
  justify-content: center;
}

.game-board-row-labels {
  display: grid;
  grid-template-rows: 65px 65px 65px 65px 65px 65px 65px 65px;
  grid-template-columns: 25px;
  justify-content: center;
}

.player-info {
  padding-left: 10px;
  width: 100%;
  border-radius: 0.5rem;
  display: flex;
  height: auto;
  overflow: auto;
}

button.menu-button {
  background-color: var(--background-color);
  color: var(--text-color);
  border: 1px solid var(--border-color);
  margin: 10px;
  padding: 10px 15px;
  width: 100%;
}

#theme-toggle {
  background-color: var(--button-color);
  width: 40px;
  height: 40px;
  border: none;
  border-radius: 200px;
  cursor: pointer;
  position: fixed;
  left: 20px;
  bottom: 20px;
  z-index: 1;
}

.add-button {
  border: var(--box-border);
}

.player-bar-box {
  width: 95%;
  height: 100px;
  border: 1px solid #cdcdcd;
}

.buttons-grid {
  display: grid;
  grid-template-columns: 85px 85px;
}

